move and update tests

--- a/core/kazoo/Makefile
+++ b/core/kazoo/Makefile
@@ -23,6 +23,11 @@ kz-test:
 
 include $(ROOT)/make/kz.mk
 
+compile-test: compile-test-deps
+
+compile-test-deps:
+	$(MAKE) -C $(ROOT)/core/kazoo_stdlib compile-test
+
 clean-generated:
 	$(if $(wildcard $(GEN_OUT)), rm $(GEN_OUT))
 
