--- a/core/kazoo_number_manager/Makefile
+++ b/core/kazoo_number_manager/Makefile
@@ -34,6 +34,7 @@ compile-test: compile-also
 
 compile-also:
 	$(MAKE) compile-test -C $(ROOT)/core/kazoo_config/
+	$(MAKE) compile-test -C $(ROOT)/core/kazoo_stdlib/
 
 include $(ROOT)/make/kz.mk
 
