--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,7 @@ machine:
     OTP_VERSION: 19.3
     PATH: ${HOME}/.kerl/$OTP_VERSION/bin:${PATH}
     CHANGED: 'git --no-pager diff --name-only HEAD origin/master -- applications core'
+    CHANGED_FMT: 'git --no-pager diff --name-only HEAD origin/master -- `find {applications,core} -name "*.erl" -or -name "*.hrl"`'
     CHANGED_SWAGGER: 'git --no-pager diff --name-only HEAD origin/master -- applications/crossbar/priv/api/swagger.json'
   services:
     - rabbitmq-server
@@ -30,8 +31,8 @@ test:
     - ./scripts/state-of-docs.sh || true
     - ./scripts/code_checks.bash $($CHANGED)
     - |
-      if [[ ! -z "$($CHANGED)" ]]; then
-        TO_FMT="$(echo $($CHANGED))" make fmt
+      if [[ ! -z "$($CHANGED_FMT)" ]]; then
+        TO_FMT="$(echo $($CHANGED_FMT))" make fmt
       fi
     - if [[ "$CIRCLE_BRANCH" = 'master' ]]; then make bump-copyright; fi
     - . ~/.kerl/$OTP_VERSION/activate && make
