--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     OTP_VERSION: 19.3
     PATH: ${HOME}/.kerl/$OTP_VERSION/bin:${PATH}
     CHANGED: 'git --no-pager diff --name-only HEAD origin/master -- applications core'
-    CHANGED_FMT: 'git --no-pager diff --name-only HEAD origin/master -- `find {applications,core} -name "*.erl" -or -name "*.hrl"`'
+    CHANGED_FMT: 'find {applications,core} -name "*.erl" -or -name "*.hrl" | xargs git --no-pager diff --name-only HEAD origin/master --'
     CHANGED_SWAGGER: 'git --no-pager diff --name-only HEAD origin/master -- applications/crossbar/priv/api/swagger.json'
   services:
     - rabbitmq-server
