--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     OTP_VERSION: 19.3
     PATH: ${HOME}/.kerl/$OTP_VERSION/bin:${PATH}
     CHANGED: 'git --no-pager diff --name-only HEAD origin/master -- applications core'
-    CHANGED_FMT: 'find {applications,core} -name "*.erl" -or -name "*.hrl" | xargs git --no-pager diff --name-only HEAD origin/master --'
+    TO_FMT: 'find {applications,core} -name "*.erl" -or -name "*.hrl" | xargs git --no-pager diff --name-only HEAD origin/master --'
     CHANGED_SWAGGER: 'git --no-pager diff --name-only HEAD origin/master -- applications/crossbar/priv/api/swagger.json'
   services:
     - rabbitmq-server
@@ -28,11 +28,12 @@ dependencies:
 test:
   pre:
     - $CHANGED
+    - $TO_FMT
     - ./scripts/state-of-docs.sh || true
     - ./scripts/code_checks.bash $($CHANGED)
     - |
-      if [[ ! -z "$($CHANGED_FMT)" ]]; then
-        TO_FMT="$(echo $CHANGED_FMT)" make fmt
+      if [[ ! -z "$($TO_FMT)" ]]; then
+        make fmt
       fi
     - if [[ "$CIRCLE_BRANCH" = 'master' ]]; then make bump-copyright; fi
     - . ~/.kerl/$OTP_VERSION/activate && make
