--- a/circle.yml
+++ b/circle.yml
@@ -2,8 +2,8 @@ machine:
   environment:
     OTP_VERSION: 19.3
     PATH: ${HOME}/.kerl/$OTP_VERSION/bin:${PATH}
-    CHANGED: 'git --no-pager diff --name-only HEAD origin/master -- applications core'
-    TO_FMT: 'find {applications,core} -name "*.erl" -or -name "*.hrl" | xargs git --no-pager diff --name-only HEAD origin/master --'
+    CHANGED: 'git --no-pager diff --name-only HEAD origin/master -- applications core scripts'
+    TO_FMT: 'echo $CHANGED | grep -v ".app.src"'
     CHANGED_SWAGGER: 'git --no-pager diff --name-only HEAD origin/master -- applications/crossbar/priv/api/swagger.json'
   services:
     - rabbitmq-server
@@ -28,7 +28,6 @@ dependencies:
 test:
   pre:
     - $CHANGED
-    - $TO_FMT
     - ./scripts/state-of-docs.sh || true
     - ./scripts/code_checks.bash $($CHANGED)
     - |
