make sure kazoo_data is compiled first

--- a/core/kazoo_couch/Makefile
+++ b/core/kazoo_couch/Makefile
@@ -3,4 +3,9 @@ PROJECT = kazoo_couch
 
 all: compile
 
+compile: compile-first
+
+compile-first:
+	$(MAKE) -C $(ROOT)/core/kazoo_data/ $(ACTION)
+
 include $(ROOT)/make/kz.mk
