--- a/core/kazoo_number_manager/Makefile
+++ b/core/kazoo_number_manager/Makefile
@@ -2,10 +2,10 @@ ROOT = ../..
 PROJECT = kazoo_number_manager
 
 # ISO3166-alpha2 to dialcode (ITU) module generator.
-ITU = src/knm_iso3166a2_itu.erl
-ITU_SRC = src/knm_iso3166a2_itu.erl.src
-ITU_FILE = dialcodes.json
-ITU_URL = https://raw.githubusercontent.com/mledoze/countries/c212082894e48e8be123dad5dea7d9e6abc0c1b9/countries.json
+ITU := src/knm_iso3166a2_itu.erl
+ITU_SRC := src/knm_iso3166a2_itu.erl.src
+ITU_FILE := dialcodes.json
+ITU_URL := https://raw.githubusercontent.com/mledoze/countries/c212082894e48e8be123dad5dea7d9e6abc0c1b9/countries.json
 # official list https://www.itu.int/pub/T-SP-E.164D
 # but there are newer ones… https://www.itu.int/pub/T-SP-OB
 #
@@ -22,7 +22,7 @@ ITU_URL = https://raw.githubusercontent.com/mledoze/countries/c212082894e48e8be1
 # https://countrycode.org/
 # https://en.wikipedia.org/wiki/List_of_country_calling_codes
 
-SOURCES = src/*.erl src/*/*.erl $(ITU)
+SOURCES := $(ITU) src/*.erl src/*/*.erl
 
 CLEAN_MOAR = clean-generated
 
@@ -45,6 +45,6 @@ $(ITU_FILE):
 	wget -qO $@ $(ITU_URL)
 
 $(ITU): $(ITU_FILE) $(ITU_SRC)
-	@cat $(ITU_SRC) >$(ITU)
-	@python -c 'from __future__ import print_function; import json; [print("to_itu(<<\"", l["cca2"], "\">>) -> <<\"+", l["callingCode"][0], "\">>;", sep="") for l in sorted(json.load(open("dialcodes.json")), key=lambda l: l["cca2"]) if len(l["callingCode"]) > 0]' >>$(ITU)
-	@echo 'to_itu(_) -> <<>>.' >>$(ITU)
+	@cat $(ITU_SRC) > $@
+	@python -c 'from __future__ import print_function; import json; [print("to_itu(<<\"", l["cca2"], "\">>) -> <<\"+", l["callingCode"][0], "\">>;", sep="") for l in sorted(json.load(open("dialcodes.json")), key=lambda l: l["cca2"]) if len(l["callingCode"]) > 0]' >> $@
+	@echo 'to_itu(_) -> <<>>.' >> $@
