--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     OTP_VERSION: 19.3
     PATH: ${HOME}/.kerl/$OTP_VERSION/bin:${PATH}
     CHANGED: 'git --no-pager diff --name-only HEAD origin/master -- applications core scripts'
-    TO_FMT: 'echo $CHANGED | grep -v ".app.src"'
+    TO_FMT: 'git --no-pager diff --name-only HEAD origin/master -- "*.erl" "*.hrl"'
     CHANGED_SWAGGER: 'git --no-pager diff --name-only HEAD origin/master -- applications/crossbar/priv/api/swagger.json'
   services:
     - rabbitmq-server
