some schema updates and added app store nav to yml

--- a/doc/mkdocs/commercial.yml
+++ b/doc/mkdocs/commercial.yml
@@ -49,6 +49,11 @@ pages:
 #BUILD    - 'Controlling Calls' : 'tutorial/call_control.md'
 #BUILD    - 'Integrating Mobile Services' : 'tutorial/mobile_services.md'
 
+- 'App Exchange':
+  # Build your app
+  # List your app
+  # Sell your app
+
 - 'Configuration APIs':
   - 'Users and Devices':
     - 'applications/crossbar/doc/devices.md'
